<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.a4t8bfarm.a4t8b.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="vertical"
        android:padding="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.15"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/firstname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/title"
                            android:hint="Firstname"
                            android:maxLength="45"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/firstname"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/lastname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/firstname"
                            android:hint="Lastname"
                            android:maxLength="45"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lastname"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textSize="10sp" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.45"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.55"
                        android:orientation="vertical"
                        android:weightSum="1">

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/title"
                            android:layout_alignRight="@+id/title"
                            android:layout_below="@+id/lastname"
                            android:layout_weight="0.1"
                            android:hint="Username"
                            android:maxLength="15"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1"
                            android:text="@string/username"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textSize="8sp" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/title"
                            android:layout_alignRight="@+id/title"
                            android:layout_below="@+id/username"
                            android:layout_weight="0.1"
                            android:hint="Password"
                            android:inputType="textPassword"
                            android:maxLength="40"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:id="@+id/textView16"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1"
                            android:text="@string/password"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textSize="8sp" />

                        <EditText
                            android:id="@+id/confirmPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/title"
                            android:layout_alignRight="@+id/title"
                            android:layout_below="@+id/username"
                            android:layout_weight="0.1"
                            android:hint="Confirm Password"
                            android:inputType="textPassword"
                            android:maxLength="40"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1"
                            android:text="@string/confirmPassword"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textSize="8sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/password"
                            android:layout_weight="1"
                            android:hint="E-Mail Address"
                            android:inputType="textEmailAddress"
                            android:maxLength="70"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:id="@+id/textView18"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/email"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textSize="8sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/mobilePhone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/email"
                            android:layout_weight="1"
                            android:hint="Mobile Number"
                            android:inputType="number"
                            android:maxLength="11"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/mobileNumber"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textSize="8sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.2"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.7"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/deliveryAddress"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/password"
                            android:layout_weight="1"
                            android:hint="Delivery Address"
                            android:inputType="textPostalAddress"
                            android:maxLength="45"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/address"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textSize="8sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.3"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/zipCode"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/email"
                            android:layout_weight="1"
                            android:hint="Postal/Zip #"
                            android:inputType="number"
                            android:maxLength="11"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="8dp"
                            tools:layout_editor_absoluteY="0dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/zipCode"
                            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                            android:textSize="8sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical"
        android:weightSum="1">

        <Button
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/mobilePhone"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="Create Account"
            android:textColor="#FFFFFF"

            android:textSize="30sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/loginReturn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/createAccountButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/createAccountButton"
            android:layout_below="@+id/createAccountButton"
            android:layout_weight="1"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="Return to Login Page"
            android:textColor="#FFFFFF"
            android:textSize="21sp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

</LinearLayout>
