<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:cardCornerRadius="5dp"
        app:cardMaxElevation="20dp"
        app:cardPreventCornerOverlap="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:descendantFocusability="blocksDescendants"
                android:orientation="horizontal"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.24"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="0dp"
                        android:layout_height="90dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/image_placeholder" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="0.76"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.40"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:weightSum="1">

                            <TextView
                                android:id="@+id/tvName"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.65"
                                android:singleLine="true"
                                android:text="TextView"
                                android:textAppearance="@style/TextAppearance.AppCompat"
                                android:textSize="20sp" />

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.1"
                                app:srcCompat="@drawable/ic_touch" />

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="0.25"
                                android:gravity="center_vertical|center_horizontal"
                                android:singleLine="false"
                                android:text="@string/add_instruction"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textSize="10sp" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.60"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="0.8"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:weightSum="1">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="0.5">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:gravity="center_vertical"
                                    android:orientation="horizontal"
                                    android:weightSum="1">

                                    <TextView
                                        android:id="@+id/textView15"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="0.2"
                                        android:gravity="center"
                                        android:text="QTY" />

                                    <ImageButton
                                        android:id="@+id/qty_decrease"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="0.1"
                                        android:background="@color/colorWhiteBackground"
                                        app:srcCompat="@drawable/ic_qty_decrease" />

                                    <TextView
                                        android:id="@+id/edQty"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_weight="0.2"
                                        android:gravity="center"
                                        android:text="0" />

                                    <ImageButton
                                        android:id="@+id/qty_increase"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="0.1"
                                        android:background="@color/colorWhiteBackground"
                                        app:srcCompat="@drawable/ic_qty_inc" />

                                    <LinearLayout
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight="0.4"
                                        android:gravity="center_vertical"
                                        android:orientation="horizontal"
                                        android:weightSum="1">

                                        <ImageView
                                            android:id="@+id/imageView8"
                                            android:layout_width="0dp"
                                            android:layout_height="wrap_content"
                                            android:layout_weight="0.25"
                                            app:srcCompat="@android:drawable/ic_menu_edit" />

                                        <Button
                                            android:id="@+id/editQty"
                                            android:layout_width="0dp"
                                            android:layout_height="match_parent"
                                            android:layout_gravity="center"
                                            android:layout_weight="0.75"
                                            android:background="@color/cardview_light_background"
                                            android:gravity="center"
                                            android:text="@string/edit_qty"
                                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                                            android:textColor="?attr/colorPrimary" />
                                    </LinearLayout>

                                </LinearLayout>

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="1">

                                <ImageView
                                    android:id="@+id/imageView4"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="0.2"
                                    app:srcCompat="@drawable/ic_scale" />

                                <TextView
                                    android:id="@+id/tvUnit"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="0.4"
                                    android:gravity="center_vertical|center_horizontal"
                                    android:text="TextView" />

                                <ImageView
                                    android:id="@+id/imageView5"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="0.1"
                                    app:srcCompat="@drawable/ic_price_tag" />

                                <TextView
                                    android:id="@+id/tvPrice"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="0.3"
                                    android:gravity="center_vertical|center_horizontal"
                                    android:text="TextView" />
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <ImageButton
                                android:id="@+id/btnRemove"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/colorWhiteBackground"
                                app:srcCompat="@android:drawable/ic_menu_delete" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvInstruction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:text="@string/special_instruction"
                android:textColor="?android:attr/textColorPrimaryInverse"
                android:textSize="12sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>